# gtest_template

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  classtest_1_1_disjoint_set-members.html  classtest_1_1_disjoint_set.html  classtest_1_1_disjoint_set.js  classtest_1_1_disjoint_set__coll__graph.map  classtest_1_1_disjoint_set__coll__graph.md5  classtest_1_1_disjoint_set__inherit__graph.map  classtest_1_1_disjoint_set__inherit__graph.md5  classtest_1_1_disjoint_set_path_compression-members.html  classtest_1_1_disjoint_set_path_compression.html  classtest_1_1_disjoint_set_path_compression.js  classtest_1_1_disjoint_set_path_compression__coll__graph.map  classtest_1_1_disjoint_set_path_compression__coll__graph.md5  classtest_1_1_disjoint_set_path_compression__inherit__graph.map  classtest_1_1_disjoint_set_path_compression__inherit__graph.md5  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.js  disjoint__set_8hpp.html  disjoint__set_8hpp__incl.map  disjoint__set_8hpp__incl.md5  disjoint__set_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  (+15 more)
.github/workflows/: deploy.yml  unit_test.yml
example/: CMakeLists.txt  suffix_array.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  disjoint_set.hpp  suffix_array.cpp  suffix_array.h
test/unit_test/: CMakeLists.txt  disjoint_set_test.cpp  suffix_array_test.cpp
